packages/next-swc/crates/core/tests/errors/next-font-downloaders/font-modules/not-ident/output.js
import '@next/google-fonts?{"font":"Inter","variant":"400"}';
import '@next/google-fonts?{"font":"Inter","variant":"400"}';
const { e  } = {};
